--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "scripts": {
     "lint": "eslint src/*.js",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "precypress:open": "PORT=6001 http-server src &",
+    "cypress:open": "cypress open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cypress": "^12.7.0",
     "eslint": "^8.35.0",
+    "http-server": "^14.1.1",
     "jest": "^29.4.3"
   }
 }
