--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "eslint src/*.js",
     "test": "jest --coverage",
-    "precypress:open": "PORT=6001 http-server src &",
+    "precypress:open": "PORT=6001 live-server src &",
     "cypress:open": "cypress open"
   },
   "keywords": [],
@@ -14,7 +14,7 @@
   "devDependencies": {
     "cypress": "^12.7.0",
     "eslint": "^8.35.0",
-    "http-server": "^14.1.1",
-    "jest": "^29.4.3"
+    "jest": "^29.4.3",
+    "live-server": "^1.2.2"
   }
 }
